Concurrent bucket reopen of uncompressed buckets can cause tripwire for couldn't compress bucket

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Execution Team 2024-10-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Concurrent reopenings of the same bucket can cause bucket compression to fail when it encounters an already compressed bucket as it was made compressed by another thread.

       

      We should also remove the tripwire, the stacktrace is not helpful in the case of a real compression error.

            Assignee:
            Henrik Edin
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: