SERVER-95474 Gracefully handle trying to compress already compressed bucket (#27792)

GitOrigin-RevId: 618f9287f75061f40502bfc7ed083dd2a2b08389