src/mongo/db/timeseries/timeseries_dotted_path_support_test.cpp
@@ -153,6 +153,7 @@ TEST_F(TimeseriesDottedPathSupportTest, fieldContainsArrayData) {
     BSONObj input = ::mongo::fromjson(R"(
 {
     control: {
+        version: 1,
         min: {
             a: 1.0,
             b: true,
